--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="js/App.js"></script>
     <script src="js/routers/MainRouter.js"></script>
     
+    <script src="js/models/Label.js"></script>
     <script src="js/models/Entry.js"></script>
 
     <script src="js/views/EntryCollectionView.js"></script>
